--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
-name: Build for Linux & Windows
+name: Build and Release
 
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch:
 
 jobs:
   build:
@@ -12,14 +11,14 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install Rust
+    - name: Set up Rust
       uses: dtolnay/rust-toolchain@stable
 
     - name: Build for Linux
-      run: cargo build --release --verbose
+      run: cargo build --release
 
     - name: Upload Linux Binary
       uses: actions/upload-artifact@v3
       with:
-        name: apo_bundle_optimizer_linux
+        name: apo-optimizer-linux
         path: target/release/apo_bundle_project
