--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,14 @@
-name: Build and Release
-
-on:
-  push:
-    branches: [ "main" ]
-
+name: Build for Linux
+on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Rust
-      uses: dtolnay/rust-toolchain@stable
-
-    - name: Build for Linux
-      run: cargo build --release
-
-    - name: Upload Linux Binary
-      uses: actions/upload-artifact@v3
-      with:
-        name: apo-optimizer-linux
-        path: target/release/apo_bundle_project
+      - uses: actions/checkout@v4
+      - name: Build
+        run: cargo build --release
+      - name: Upload Binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: apo-optimizer-linux
+          path: target/release/apo_bundle_project
